# image-tools

.github/workflows/: package-filter.yml  package-release.yml  package-tests.yml  plugin-release.yml  tests.yml
features/nyxus-plugin/: .bumpversion.cfg  README.md  package-release.sh  plugin.json  pyproject.toml
features/pixel-segmentation-eval-tool/: pyproject.toml
features/region-segmentation-eval-tool/: pyproject.toml
formats/czi-extract-plugin/: .gitignore  bumpversion.cfg  pyproject.toml
formats/czi-extract-plugin/src/polus/plugins/formats/czi_extract/: __main__.py
formats/czi-extract-plugin/tests/: conftest.py  test_cli.py  test_czi.py
formats/file-renaming-plugin/: .bumpversion.cfg  plugin.json  pyproject.toml
formats/file-renaming-plugin/src/polus/plugins/formats/file_renaming/: __init__.py
formats/polus-vector-converter-plugins/: vector_to_label_plugin.json
formats/polus-vector-converter-plugins/src/: dynamics.py  label_to_vector.py
formats/stitching-vector-to-microjson-plugin/: .bumpversion.cfg  Dockerfile  README.md  plugin.json  pyproject.toml  run-plugin.sh
formats/stitching-vector-to-microjson-plugin/src/polus/plugins/formats/stitching_vector_to_microjson/: __init__.py  __main__.py  convert.py
formats/stitching-vector-to-microjson-plugin/tests/: conftest.py  test_cli.py  test_sv2mj.py
formats/vector-to-label-tool/src/polus/images/formats/vector_to_label/dynamics/: vector_to_label.py
regression/basic-flatfield-estimation-tool/: .bumpversion.cfg  Dockerfile  README.md  VERSION  plugin.json  pyproject.toml
regression/basic-flatfield-estimation-tool/src/polus/images/regression/basic_flatfield_estimation/: __init__.py
regression/polus-bleed-through-estimation-plugin/: Dockerfile  README.md  VERSION  main.py  plugin.json  requirements.txt  run-plugin.sh
regression/polus-bleed-through-estimation-plugin/bleed_through_estimation/: __init__.py  models.py  tile_selectors.py
regression/polus-bleed-through-estimation-plugin/src/: main.py  models.py  tile_selectors.py  utils.py
regression/polus-bleed-through-estimation-plugin/tests/: generate_images.py
regression/polus-bleed-through-estimation-plugin/utils/: __init__.py  constants.py  helpers.py  types.py
segmentation/polus-smp-training-plugin/: Dockerfile  README.md  VERSION  generate_plugin_manifest.py  plugin.json  run-plugin.sh
segmentation/polus-smp-training-plugin/misc/: preprocess_tissuenet.py
segmentation/polus-smp-training-plugin/src/: main.py  training.py
segmentation/polus-smp-training-plugin/src/utils/: dataset.py  helpers.py  options.py
segmentation/polus-smp-training-plugin/tests/: model_test.py
transforms/autocropping-tool/: .bumpversion.cfg  Dockerfile  README.md  autocropping.cwl  plugin.json  pyproject.toml  run-plugin.sh
transforms/autocropping-tool/src/polus/images/transforms/autocropping/: __init__.py  __main__.py  autocropping.py  bounding_box.py  entropy.py  gradients.py  utils.py
transforms/autocropping-tool/tests/: __init__.py  conftest.py  test_autocropping.py  test_cli.py
transforms/images/apply-flatfield-plugin/: .bumpversion.cfg  README.md  VERSION  plugin.json  pyproject.toml
transforms/images/apply-flatfield-plugin/src/polus/plugins/transforms/images/apply_flatfield/: __init__.py
transforms/images/image-calculator-plugin/: .bumpversion.cfg  README.md  plugin.json  pyproject.toml
transforms/images/image-calculator-plugin/src/polus/plugins/transforms/images/image_calculator/: __init__.py
transforms/images/image-registration-plugin/: .bumpversion.cfg  Dockerfile  README.md  plugin.json  pyproject.toml
transforms/images/image-registration-plugin/src/polus/plugins/transforms/images/image_registration/: __init__.py  __main__.py
transforms/images/image-registration-plugin/src/polus/plugins/transforms/images/image_registration/register/: __init__.py  image_registration.py
transforms/images/image-registration-plugin/src/polus/plugins/transforms/images/image_registration/utils/: __init__.py  constants.py  helpers.py
transforms/images/montage-tool/: pyproject.toml
transforms/images/polus-ftl-label-plugin/: .gitignore  Cargo.toml  profile.sh
transforms/images/polus-ftl-label-plugin/benches/: conversions.py  large.rs
transforms/images/polus-ftl-label-plugin/examples/: large.rs
transforms/images/polus-ftl-label-plugin/src/: lib.rs  polygons.rs  requirements.txt
transforms/images/roi-relabel-plugin/: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  build-docker.sh  plugin.json  pyproject.toml
transforms/images/roi-relabel-plugin/examples/: visualizer.py
transforms/images/roi-relabel-plugin/src/polus/transforms/images/roi_relabel/: __init__.py  __main__.py
transforms/images/roi-relabel-plugin/src/polus/transforms/images/roi_relabel/methods/: __init__.py  graph.py  roi.py
transforms/images/roi-relabel-plugin/src/polus/transforms/images/roi_relabel/utils/: __init__.py  constants.py  helpers.py  types.py
utils/github-actions/: README.md  pyproject.toml
utils/github-actions/src/polus/actions/: __init__.py  __main__.py  git_comp.py  tool_spec.py
visualization/precompute-slide-tool/: .bumpversion.cfg  README.md  ict.yml  plugin.json
visualization/precompute-slide-tool/src/polus/images/visualization/precompute_slide/: __main__.py
