[tool.poetry]
name = "polus-plugins-formats-stitching-vector-to-microjson-plugin"
version = "0.1.0"
description = "Convert stitching vectors from text format to microjson."
authors = ["Najib Ishaq <najib_ishaq@nih.gov>"]
license = "MIT"
readme = "README.md"
packages = [{include = "polus", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
typer = "^0.9.0"
filepattern = "^2.0.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
bump2version = "^1.0.1"
requests = "^2.31.0"
pytest = "^7.4.4"
pytest-sugar = "^0.9.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
