[tool.poetry]
name = "polus-plugins-transforms-images-image-registration"
version = "0.4.0-dev0"
description = ""
authors = [
    "Najib Ishaq <najib.ishaq@nih.gov>",
    "Gauhar Bains <gauhar.bains@labshare.org>",
    "Nicholas Schaub <nick.schaub@nih.gov>",
]
readme = "README.md"
packages = [{include = "polus", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
bfio = {version = "2.1.9", extras = ["all"]}
# filepattern = [
#     { version = "^2.0.0", platform = "linux" },
#     { version = "^2.0.0", platform = "win32" },
#     { git = "https://github.com/PolusAI/filepattern", rev = "c07bf543c435cbc4cf264effd5a178868e9eaf19", platform = "darwin" },
# ]
filepattern = "1.4.7"
typer = "^0.7.0"
tqdm = "^4.65.0"
opencv-python-headless = "^4.8.0.76"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.272"
mypy = "^1.4.0"
pre-commit = "^3.3.3"
bump2version = "^1.0.1"
pytest = "^7.3.2"
pytest-xdist = "^3.3.1"
pytest-sugar = "^0.9.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
