[tool.poetry]
name = "polus-transforms-images-roi-relabel"
version = "0.1.3-dev0"
description = ""
authors = ["Najib Ishaq <najib.ishaq@nih.gov>"]
readme = "README.md"
packages = [{include = "polus", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
bfio = { version = "2.1.9", extras = ["all"] }
filepattern = "1.4.7"
numpy = "^1.24.2"
scipy = "^1.10.0"
networkx = "^3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-sugar = "^0.9.6"
pytest-xdist = "^3.2.0"
pytest-benchmark = "^4.0.0"
bump2version = "^1.0.1"
pre-commit = "^3.0.4"
flake8 = "^6.0.0"
flake8-docstrings = "^1.7.0"
black = "^23.1.0"
mypy = "^1.0.0"

[tool.poetry.group.examples.dependencies]
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
streamlit = "^1.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
